# soroban-user-profile

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy-local.sh  render.sh  upgrade-contract.sh
.github/workflows/: ci.yml  release-plz.yml
src/: events.rs  fields.rs  lib.rs  profile.rs  render.rs  storage.rs  validation.rs
test_snapshots/: test_ban_profile.1.json  test_delete_profile.1.json  test_init.1.json  test_register_profile.1.json  test_registration_fee.1.json  test_remove_field.1.json  test_reserve_username.1.json  test_set_fields.1.json  test_transfer_profile.1.json  test_unreserve_username.1.json  test_update_display_name.1.json  test_username_uniqueness.1.json  test_username_validation.1.json
tests/: integration.rs
